A 1.5rem top margin to an adjacent sibling .question to ensure that there’s proper spacing in _base.scss.

--- a/app/_scss/core/_base.scss
+++ b/app/_scss/core/_base.scss
@@ -162,6 +162,10 @@ ol {
     font-family: inherit;
     font-weight: normal;
   }
+
+  &+.question {
+    @include rem(margin-top, 1.5);
+  }
 }
 
 .text-left {
